--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
 </head>
 <body>
     <header>
+        
+            <ul class="menu">
+                <li>
+                    <a class="menu-button1">Главная</a>
+                </li>
+                <li>
+                    <a class="menu-button2">Портфолио</a>
+                </li>
+                <li>
+                    <a class="menu-button3">Светорасчет</a>
+                </li>
+                <li>
+                    <a class="menu-button4">Демонстрация</a>
+                </li>
+                <li>
+                    <a class="menu-button5">Отзывы</a>
+                </li>
+                <li>
+                    <a class="menu-button6">Контакты</a>
+                </li>
+            </ul>
+            <span class="head">
+        </span>
+        <div class="navpage"></div>
+        <img class="logo" src="logo\эмблема.png">
 
     </header>
     <main>
