--- a/index.html
+++ b/index.html
@@ -37,7 +37,21 @@
 
     </header>
     <main>
-
+        <div>
+            <img class="slider" src="images\sldimg.png">
+            <h1 class="slider-header">Какая встреча пройдет продуктивнее? </h1>
+            <a class="slider-text">Холодные оттенки света стимулируют умственную и физическую активность человека, помогают сконцентрироваться.</a>
+            <div class="slider-section_turned"></div>
+            <div class="slider-section_1"></div>
+            <div class="slider-section_2"></div>
+            
+        <svg class="arrow-left" viewBox="0 0 5 9">
+        <path d="M0.419,9.000 L0.003,8.606 L4.164,4.500 L0.003,0.394 L0.419,0.000 L4.997,4.500 L0.419,9.000 Z" ></path>
+         </svg>
+         <svg class="arrow-right" viewBox="0 0 5 9">
+         <path d="M0.419,9.000 L0.003,8.606 L4.164,4.500 L0.003,0.394 L0.419,0.000 L4.997,4.500 L0.419,9.000 Z" ></path>
+         </svg>
+        </div>
     </main>
     <footer>
     </footer>
