logos and advantages

--- a/index.html
+++ b/index.html
@@ -52,6 +52,41 @@
          <path d="M0.419,9.000 L0.003,8.606 L4.164,4.500 L0.003,0.394 L0.419,0.000 L4.997,4.500 L0.419,9.000 Z" ></path>
          </svg>
         </div>
+        <h1 class="advantages">Наши приемущества</h2>
+        <ul class="adv">
+            <li>
+                <li>
+                    <a class="adv_1">Большой каталог поставок</a>
+                    <img class="adv1" src="images\adv1.png">
+                </li>
+                <li>
+                    <a class="adv_2">Бесплатная консультация за 30 минут</a>
+                    <img class="adv2" src="images\adv2.png">
+                </li>
+                <li>
+                    <a class="adv_3">Доставка по Ростовской области</a>
+                    <img class="adv3" src="images\adv3.png">
+                </li>
+                <li>
+                    <a class="adv_4">Минимум в два раза сохкратятся ваши расходы</a>
+                    <img class="adv4" src="images\adv4.png">
+                </li>
+                <li>
+                    <a class="adv_5">Гарантия на 5 лет</a>
+                    <img class="adv5" src="images\adv5.png">
+                </li>
+                <li>
+                    <a class="adv_6">Разрабатываем полностью готовый проект</a>
+                    <img class="adv6" src="images\adv6.png">
+                </li>
+            </li>
+        </ul>
+        <button class="consult">Связаться с консультантом</button>
+        <span>
+            <div class="line"></div>
+            <h2 class="section2_text">Выгодные решения</h2>
+        </span>
+        
     </main>
     <footer>
     </footer>
