--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <title></title>
     <link rel="stylesheet" href=".\css\style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,regular,500,600,700" rel="stylesheet" />
 </head>
 <body>
@@ -83,10 +84,38 @@
         </ul>
         <button class="consult">Связаться с консультантом</button>
         <span>
-            <div class="line"></div>
+            <div class="line_1"></div>
             <h2 class="section2_text">Выгодные решения</h2>
         </span>
-        
+        <span class="solutions">
+            <div class="sol_1">
+                <a>Трековые светильники</a>
+                <img class="light_1" src="images\light1.png">
+            </div>
+            <div class="sol_2">
+                <a>Подвесные светильники</a>
+                <img class="light_2" src="images\light2.png">
+            </div>
+            <div class="sol_3"> 
+                <a>Встраевыемые светильники</a>
+                <img class="light_3" src="images\light3.png">
+            </div>
+            <div class="sol_4">
+                <a>Точечные светильники</a>
+                <img class="light_4" src="images\light4.png">
+            </div>
+            <div class="sol_5">
+                <a>Линейные светильники</a>
+                <img class="light_5" src="images\light5.png">
+            </div>
+        </span>
+        <button class="order">Заказать поставку</button>
+        <span>
+            <div class="line_2"></div>
+            <h2 class="section3_text">Как, при помощи профессионального проекта в программе в Dialux,сократить бюджет на закупку светильников до 70%?</h2>
+            <a class="dialux_1">Расчет освещенности – неотъемлемая часть любого электротехнического проекта, будь то производственное помещение, улица, торговый зал, автостоянка или просто одно рабочее место. Если специалист правильно подойдет к поставленной задаче, то общую стоимость светотехнической продукции возможно снизить на 50 и более процентов. Основной секрет хорошего решения – правильная расстановка световых приборов, оптимизация их мощности и наличие честных IES файлов, полученных в сертифицированных лабораториях.</a>
+            <a class="dialux_2">Применяя специализированные светильники, разработанные под конкретные задачи, так же возможно добиться экономии бюджета и последующих затрат на обслуживание и электроэнергию. Яркий пример – световые приборы для освещения высокопаллетных зон. В них применяется специальная оптика (линза), которая эффективно распределяет свет по поверхности пола между стеллажами (как привило, ширина этой зоны не более 3-х метров). За счет наличия линз, количество осветительной техники может сократиться вдвое.</a>
+        </span>
     </main>
     <footer>
     </footer>
