--- a/index.html
+++ b/index.html
@@ -176,7 +176,13 @@
     <footer class="footer">
         <div class="footer_background">
             <img class="logo_footer" src="logo\эмблема.png">
+            <a class="number">7 495 502-78-38</a>
+            <a class="email">lustry_tgn@gmail.ru</a>
+            <a class="kr">© 2023 Lustry_TGN. Работаем с 2010 года. Вся информация на сайте носит справочный характер и не является публичной офертой, определяемой положениями Статьи 437 Гражданского кодекса Российской Федерации.</a>
+            <button class="consult_2">Записаться на консультацию</button>
+            <div> </div>
         </div>
+
     </footer>
 </body>
 
