--- a/main.html
+++ b/main.html
@@ -47,7 +47,7 @@
         <div>
             <img class="slider" src="images\sldimg.png">
             <h1 class="slider-header">Какая встреча пройдет продуктивнее? </h1>
-            <a class="slider-text">Холодные оттенки света стимулируют умственную и физическую активность человека, помогают сконцентрироваться.</a>
+            <p class="slider-text">Холодные оттенки света стимулируют умственную и физическую активность человека, помогают сконцентрироваться.</p>
             <div class="slider-section_turned"></div>
             <div class="slider-section_1"></div>
             <div class="slider-section_2"></div>
