--- a/pages/demo.html
+++ b/pages/demo.html
@@ -130,7 +130,7 @@
        </span>
 
     </main>
-    <footer class="footer">
+    <footer class="demo_footer">
         <div class="footer_background">
             <img class="logo_footer" src="../logo/эмблема.png">
             <a class="number">7 495 502-78-38</a>
