--- a/pages/main.html
+++ b/pages/main.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -210,7 +210,7 @@
         <p class="price_crossed_3">2 700 000 р</p>
         <p class="profit_3">Сэкономили более 1 млн </p>
     </span>
-<!--
+
     <div class="FAQ">
         <h2 class="FAQ_title">Часто задаваемые вопросы</h2>
         <div class="questions_background">
@@ -243,8 +243,7 @@
             <button class="FAQ_button_9"></button>
         </div>
     </div>
-   -->
-   <!--
+ 
     <span class="providers_list">
         <h2 class="provider">Мы представляем:</h2>
         <div class="line_3"></div>
@@ -266,11 +265,10 @@
             </li>
         </ul>
     </span>
--->
 
 
     </main>
-   <footer class="footer">
+   <footer class="main_footer">
         <div class="footer_background">
             <img class="logo_footer" src="..\logo\эмблема.png">
             <a class="number">7 495 502-78-38</a>
