--- a/pages/svet.html
+++ b/pages/svet.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Демонстрация</title>
+    <title>Светорасчет</title>
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,regular,500,600,700" rel="stylesheet" />
@@ -52,11 +52,11 @@
             <a class="content_3">3. Какие работы включены в проект</a>
             <a class="content_4">4. Светотехнический расчет как основа проекта освещения</a>
         </div>
-        <img class="image_light_1">
+        <img class="image_light_1" src="../images/image_light_1.png">
     </span>
        <div>
         <h3 class="subtitle_2">Немного о терминологии</h3>
-        <p>Рекомендуем ознакомиться со следующими терминами:</p>
+        <p class="termins_title">Рекомендуем ознакомиться со следующими терминами:</p>
         <ul class="termins">
             <li><b>Направленный свет </b>— освещает только те поверхности и предметы, которые обращены к светильнику.</li>
             <li><b>Акцентный свет </b>— используется для точечного освещения отдельных зон, предметов создается светильниками направленного света.</li>
@@ -86,7 +86,7 @@
             Светотехническим расчетом определяют количество и расположение элементов освещения в соответствии с нормами и
             правилами. Типы светильников выбирают из каталога поставщиков. В ходе проектирования освещения учитывается яркость
             и угол рассеивания света.</p>
-        <img class="project_1_example">
+        <img class="project_1_example" src="..\images\exmp1.png">
         <p class="img_1_subtext">Электротехнический расчет подразумевает создание схем
             подключений и питаний электроприборов, их
             максимальную возможную суммарную мощность, способ
@@ -101,7 +101,8 @@
     </span>   
     <h3 class="subtitle_5">Светотехнический расчет как основа
         проекта освещения</h3>
-    <img class="project_2_example">
+    <img class="project_2_example" src="..\images\exmp2.jpg">
+    <div class="project_2_text">
     <p><b>Большинство компаний делают упор на электротехническую часть
         проекта, пренебрегая светотехническим расчетом. В чем ошибка?</b>
         Без расчета электротехнических параметров реализация проекта
@@ -118,8 +119,9 @@
         соответствии с нужными техническими характеристиками. Каждый
         элемент освещения имеет собственную мощность, температуру, индекс
         цветопередачи.</p>
+    </div>
     </main>
-    <footer class="footer">
+    <footer class="svet_footer">
         <div class="footer_background">
             <img class="logo_footer" src="../logo/эмблема.png">
             <a class="number">7 495 502-78-38</a>
