--- a/pages/svet.html
+++ b/pages/svet.html
@@ -43,83 +43,84 @@
 
     </header>
     <main>
-       <span>
-        <h2 class="svet_title">Светорасчет</h2>
+      <div class="svet_container"> <span>
+            <h2 class="svet_title">Светорасчет</h2>
+            <div>
+                <h3 class="subtitle_1">Оглавление</h3>
+                <a class="content_1">1. Терминология</a>
+                <a class="content_2">2. Проект освещения</a>
+                <a class="content_3">3. Какие работы включены в проект</a>
+                <a class="content_4">4. Светотехнический расчет как основа проекта освещения</a>
+            </div>
+            <img class="image_light_1" src="../images/image_light_1.png">
+        </span>
         <div>
-            <h3 class="subtitle_1">Оглавление</h3>
-            <a class="content_1">1. Терминология</a>
-            <a class="content_2">2. Проект освещения</a>
-            <a class="content_3">3. Какие работы включены в проект</a>
-            <a class="content_4">4. Светотехнический расчет как основа проекта освещения</a>
+            <h3 class="subtitle_2">Немного о терминологии</h3>
+            <p class="termins_title">Рекомендуем ознакомиться со следующими терминами:</p>
+            <ul class="termins">
+                <li><b>Направленный свет </b>— освещает только те поверхности и предметы, которые обращены к светильнику.</li>
+                <li><b>Акцентный свет </b>— используется для точечного освещения отдельных зон, предметов создается светильниками направленного света.</li>
+                <li><b>Декоративный свет </b>— устанавливается для украшения помещения или его элементов.</li>
+                <li><b>Функциональный свет </b>- применяется для освещения рабочих поверхностей или функциональных зон.</li>
+                <li><b>Угол рассеивания </b>— показывает, под каким углом будет распространяться свет от источника до поверхности.</li>
+                <li><b>Цветопередача </b>— качество передачи искусственным светом цветовых параметров предмета или поверхности относительно естественного освещения (измеряется в процентах).</li>
+                <li><b>Люкс </b>- единица измерения, обозначающая световой поток интенсивностью один люмен на квадратном метре поверхности.</li>
+                <li><b>Пульсация светового потока </b>— глубина и частота мерцания света, отражающая качество работы светильника.</li>
+                <li><b>Светового поток </b>- характеристика, оценивающая величину лучистой энергии, излучаемой источником света.</li>
+                <li><b>Люмен </b>- световой поток, излучаемый источником c силой света в одну Канделу, в телесном угле один Стерадиан. На упаковке светодиодной продукции обязательно указывается количество люменов, выдаваемых конкретным изделие.</li>
+                <li><b>Сила света </b>- плотность светового потока, которая равна отношению светового потока к телесному углу с вершиной в точке размещения источника свет.</li>
+            </ul>
         </div>
-        <img class="image_light_1" src="../images/image_light_1.png">
-    </span>
-       <div>
-        <h3 class="subtitle_2">Немного о терминологии</h3>
-        <p class="termins_title">Рекомендуем ознакомиться со следующими терминами:</p>
-        <ul class="termins">
-            <li><b>Направленный свет </b>— освещает только те поверхности и предметы, которые обращены к светильнику.</li>
-            <li><b>Акцентный свет </b>— используется для точечного освещения отдельных зон, предметов создается светильниками направленного света.</li>
-            <li><b>Декоративный свет </b>— устанавливается для украшения помещения или его элементов.</li>
-            <li><b>Функциональный свет </b>- применяется для освещения рабочих поверхностей или функциональных зон.</li>
-            <li><b>Угол рассеивания </b>— показывает, под каким углом будет распространяться свет от источника до поверхности.</li>
-            <li><b>Цветопередача </b>— качество передачи искусственным светом цветовых параметров предмета или поверхности относительно естественного освещения (измеряется в процентах).</li>
-            <li><b>Люкс </b>- единица измерения, обозначающая световой поток интенсивностью один люмен на квадратном метре поверхности.</li>
-            <li><b>Пульсация светового потока </b>— глубина и частота мерцания света, отражающая качество работы светильника.</li>
-            <li><b>Светового поток </b>- характеристика, оценивающая величину лучистой энергии, излучаемой источником света.</li>
-            <li><b>Люмен </b>- световой поток, излучаемый источником c силой света в одну Канделу, в телесном угле один Стерадиан. На упаковке светодиодной продукции обязательно указывается количество люменов, выдаваемых конкретным изделие.</li>
-            <li><b>Сила света </b>- плотность светового потока, которая равна отношению светового потока к телесному углу с вершиной в точке размещения источника свет.</li>
-        </ul>
-       </div>
-    <span>
-        <h2 class="subtitle_3">Что представляет собо проект освещения</h2>
-        <p class="contetn_2_text">Проект состоит из расчетов параметров освещения, списка необходимого для установки оборудования и электрических
-            коммуникаций. В его создании участвуют дизайнеры, архитекторы, проектировщики и прочие специалисты. Место
-            размещения и количество осветительных элементов определяется на основе эскиза помещения, в котором указывается
-            длина и высота стен, площадь пространства, расположение мебели, техники и других элементов интерьера, наличие окон,
-            дверных проемов и объем естественного освещения.</p>
-    </span> 
-    <span>
-        <h2 class="subtitle_4">Какие работы включены в проект</h2>
-        <p class="contetn_3_text">Проект освещения состоит из 3х этапов работ – световой концепции, светотехнического и электротехнического расчетов.
-            Концепция формирует замысел в соответствии с архитектурной задумкой или коммерческой задачей объекта.
-            Светотехническим расчетом определяют количество и расположение элементов освещения в соответствии с нормами и
-            правилами. Типы светильников выбирают из каталога поставщиков. В ходе проектирования освещения учитывается яркость
-            и угол рассеивания света.</p>
-        <img class="project_1_example" src="..\images\exmp1.png">
-        <p class="img_1_subtext">Электротехнический расчет подразумевает создание схем
-            подключений и питаний электроприборов, их
-            максимальную возможную суммарную мощность, способ
-            их управления, тип используемого кабеля, способ его
-            прокладки. Соответствие расчетов СП обеспечивает
-            безопасность подключения элементов к электросети
-            здания, предупреждает повреждение проводки, способное
-            возникнуть при перегрузки системы. Только после
-            электротехнического расчета осуществляется
-            окончательный выбор светильников из каталога
-            поставщика.</p>
-    </span>   
-    <h3 class="subtitle_5">Светотехнический расчет как основа
-        проекта освещения</h3>
-    <img class="project_2_example" src="..\images\exmp2.jpg">
-    <div class="project_2_text">
-    <p><b>Большинство компаний делают упор на электротехническую часть
-        проекта, пренебрегая светотехническим расчетом. В чем ошибка?</b>
-        Без расчета электротехнических параметров реализация проекта
-        невозможна. Для клиента, основной целью которого является желание
-        улучшить внешний вид и эргономичность помещения, эта часть работы
-        считается вторичной. Он, в первую очередь, должен видеть результат
-        проделанных работ – освещение, отвечающее всем требованиям
-        пространства.
-        <b>Свет должен соответствовать потребностям людей, находящихся в
-        помещении.</p></b>
-        Именно светотехнический расчет определяет, как будет выглядеть
-        помещение после окончания монтажных работ. Для получения
-        желаемого результата важно расположение светильников и их подбор в
-        соответствии с нужными техническими характеристиками. Каждый
-        элемент освещения имеет собственную мощность, температуру, индекс
-        цветопередачи.</p>
-    </div>
+        <span>
+            <h2 class="subtitle_3">Что представляет собо проект освещения</h2>
+            <p class="contetn_2_text">Проект состоит из расчетов параметров освещения, списка необходимого для установки оборудования и электрических
+                коммуникаций. В его создании участвуют дизайнеры, архитекторы, проектировщики и прочие специалисты. Место
+                размещения и количество осветительных элементов определяется на основе эскиза помещения, в котором указывается
+                длина и высота стен, площадь пространства, расположение мебели, техники и других элементов интерьера, наличие окон,
+                дверных проемов и объем естественного освещения.</p>
+        </span> 
+        <span>
+            <h2 class="subtitle_4">Какие работы включены в проект</h2>
+            <p class="contetn_3_text">Проект освещения состоит из 3х этапов работ – световой концепции, светотехнического и электротехнического расчетов.
+                Концепция формирует замысел в соответствии с архитектурной задумкой или коммерческой задачей объекта.
+                Светотехническим расчетом определяют количество и расположение элементов освещения в соответствии с нормами и
+                правилами. Типы светильников выбирают из каталога поставщиков. В ходе проектирования освещения учитывается яркость
+                и угол рассеивания света.</p>
+            <img class="project_1_example" src="..\images\exmp1.png">
+            <p class="img_1_subtext">Электротехнический расчет подразумевает создание схем
+                подключений и питаний электроприборов, их
+                максимальную возможную суммарную мощность, способ
+                их управления, тип используемого кабеля, способ его
+                прокладки. Соответствие расчетов СП обеспечивает
+                безопасность подключения элементов к электросети
+                здания, предупреждает повреждение проводки, способное
+                возникнуть при перегрузки системы. Только после
+                электротехнического расчета осуществляется
+                окончательный выбор светильников из каталога
+                поставщика.</p>
+        </span>   
+        <h3 class="subtitle_5">Светотехнический расчет как основа
+            проекта освещения</h3>
+        <img class="project_2_example" src="..\images\exmp2.jpg">
+        <div class="project_2_text">
+        <p><b>Большинство компаний делают упор на электротехническую часть
+            проекта, пренебрегая светотехническим расчетом. В чем ошибка?</b>
+            Без расчета электротехнических параметров реализация проекта
+            невозможна. Для клиента, основной целью которого является желание
+            улучшить внешний вид и эргономичность помещения, эта часть работы
+            считается вторичной. Он, в первую очередь, должен видеть результат
+            проделанных работ – освещение, отвечающее всем требованиям
+            пространства.
+            <b>Свет должен соответствовать потребностям людей, находящихся в
+            помещении.</b>
+            Именно светотехнический расчет определяет, как будет выглядеть
+            помещение после окончания монтажных работ. Для получения
+            желаемого результата важно расположение светильников и их подбор в
+            соответствии с нужными техническими характеристиками. Каждый
+            элемент освещения имеет собственную мощность, температуру, индекс
+            цветопередачи.</p>
+        </div>
+    </div> 
     </main>
     <footer class="svet_footer">
         <div class="footer_background">
