--- a/pages/svet.html
+++ b/pages/svet.html
@@ -26,10 +26,10 @@
                     <a class="menu-button3">Светорасчет</a>
                 </li>
                 <li>
-                    <a class="menu-button4">Демонстрация</a>
+                    <a class="menu-button4" href="">Демонстрация</a>
                 </li>
                 <li>
-                    <a class="menu-button5">Блог</a>
+                    <a class="menu-button5" href="#about_us">О нас</a>
                 </li>
                 <li>
                     <a class="menu-button6">Контакты</a>
