--- a/pages/demo.html
+++ b/pages/demo.html
@@ -17,22 +17,22 @@
         <nav class="head">
             <ul class="menu">
                 <li>
-                    <a class="menu-button1">Главная</a>
+                    <a class="menu-button1 scrollto" href=".\index.html">Главная</a>
                 </li>
                 <li>
-                    <a class="menu-button2">Портфолио</a>
+                    <a class="menu-button2 scrollto" href="\index.html#port">Портфолио</a>
                 </li>
                 <li>
-                    <a class="menu-button3">Светорасчет</a>
+                    <a class="menu-button3" href=".\svet.html">Светорасчет</a>
                 </li>
                 <li>
-                    <a class="menu-button4">Демонстрация</a>
+                    <a class="menu-button4" href=".\demo.html">Демонстрация</a>
                 </li>
                 <li>
-                    <a class="menu-button5">Блог</a>
+                    <a class="menu-button5 scrollto" href=".\index.html#about_us">О нас</a>
                 </li>
                 <li>
-                    <a class="menu-button6">Контакты</a>
+                    <a class="menu-button6" href=".\contacts.html">Контакты</a>
                 </li>
             </ul>
             
@@ -177,12 +177,12 @@
             <a class="kr">© 2023 Lustry_TGN. Работаем с 2010 года. Вся информация на сайте носит справочный характер и не является публичной офертой, определяемой положениями Статьи 437 Гражданского кодекса Российской Федерации.</a>
             <button class="consult_2" id="button-199576"  target="_blank" onclick="FDPopup.open(199577,{'hideCloseBtn':false,'host':'formdesigner.ru','overlay':{'background':'#000000','opacity':0.1}}); return false;" href="https://formdesigner.ru/form/view/199577">Записаться на консультацию</button>
             <div class="footer_nav">
-                <a class="footer_nav_1">Проекты</a>
-                <a class="footer_nav_2">Блог</a>
-                <a class="footer_nav_3">Демонстрация</a>
-                <a class="footer_nav_4">FAQ</a>
-                <a class="footer_nav_5">Каталог</a>
-                <a class="footer_nav_6">О нас</a>
+                <a class="footer_nav_1" href=".\index.html#port">Проекты</a>
+                <a class="footer_nav_2" href=".\svet.html">Светорасчет</a>
+                <a class="footer_nav_3" href=".\demo.html">Демонстрация</a>
+                <a class="footer_nav_4 scrollto" href=".\index.html#faq">FAQ</a>
+                <a class="footer_nav_5" href="https://drive.google.com/uc?export=download&id=162l7-3o3GKOUTc3WNzPS94XfmimdXG_-">Каталог</a>
+                <a class="footer_nav_6" href=".\index.html#about_us">О нас</a>
                 </div>
                 <p class="adress">Гоголевский пер., 26А, Таганрог</p>
                 <p class="phone">+7 (939) 789-00-58</p>
