--- a/pages/demo.html
+++ b/pages/demo.html
@@ -175,7 +175,7 @@
             <a class="number">7 495 502-78-38</a>
             <a class="email">lustry_tgn@gmail.ru</a>
             <a class="kr">© 2023 Lustry_TGN. Работаем с 2010 года. Вся информация на сайте носит справочный характер и не является публичной офертой, определяемой положениями Статьи 437 Гражданского кодекса Российской Федерации.</a>
-            <button class="consult_2" id="button-199576"  target="_blank" onclick="FDPopup.open(199577,{'hideCloseBtn':false,'host':'formdesigner.ru','overlay':{'background':'#000000','opacity':0.1}}); return false;" href="https://formdesigner.ru/form/view/199577">Записаться на консультацию</button>
+            <button class="consult_2" onclick="openForm()">Записаться на консультацию</button>
             <div class="footer_nav">
                 <a class="footer_nav_1" href="/index.php#port">Проекты</a>
                 <a class="footer_nav_2" href=".\svet.html">Светорасчет</a>
