--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Marmelad&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="../js/script.js" defer></script>
 </head>
 <body>
     <header>
@@ -29,7 +31,7 @@
                     <a class="menu-button4" href=".\demo.html">Демонстрация</a>
                 </li>
                 <li>
-                    <a class="menu-button5 scrollto" href="/index.phpp#about_us">О нас</a>
+                    <a class="menu-button5 scrollto" href="/index.php#about_us">О нас</a>
                 </li>
                 <li>
                     <a class="menu-button6" href=".\contacts.html">Контакты</a>
@@ -51,21 +53,22 @@
             <article class="contacts_phone">Телефон: +7 (939) 789-00-58</article>
             <article class="contacts_email">Почта: lustry_tgn@gmail.ru</article>
         </div>
-        <div class="contacts_form">
+        <form class="contacts_form" action="/php/mail.php" method="post" id="form">
             <h2>Обратная связь</h2>
             <div class="name_form">
                 <label class="name_label">ФИО</label>
-                <input class="name" placeholder="Ваше имя">
+                <input class="name" placeholder="Ваше имя" name="username">
             </div>
             <div class="email_form">
                 <label class="email_label">Почта</label>
-                <input class="email" placeholder="Ваша почта">
+                <input class="email" placeholder="Ваша почта" name="useremail">
             </div>
             <div class="msg_form">
                 <label class="msg_label">Сообщение</label>
-                <textarea class="msg" placeholder="Ваше сообщение"></textarea>
+                <textarea class="msg" placeholder="Ваше сообщение" name="usermsg"></textarea>
             </div>
-        </div>
+            <button class="contacts_button" type="submit">Отправить</button>
+        </form>
         <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d479.08792794134604!2d38.91644438645787!3d47.21402721190218!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1687018828322!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
     <footer class="contacts_footer">
@@ -74,9 +77,9 @@
             <a class="number">7 495 502-78-38</a>
             <a class="email">lustry_tgn@gmail.ru</a>
             <a class="kr">© 2023 Lustry_TGN. Работаем с 2010 года. Вся информация на сайте носит справочный характер и не является публичной офертой, определяемой положениями Статьи 437 Гражданского кодекса Российской Федерации.</a>
-            <button class="consult_2" id="button-199576"  target="_blank" onclick="FDPopup.open(199577,{'hideCloseBtn':false,'host':'formdesigner.ru','overlay':{'background':'#000000','opacity':0.1}}); return false;" href="https://formdesigner.ru/form/view/199577">Записаться на консультацию</button>
+            <button class="consult_2" onclick="openForm()">Записаться на консультацию</button>
             <div class="footer_nav">
-                <a class="footer_nav_1" href="index.php#port">Проекты</a>
+                <a class="footer_nav_1" href="/index.php#port">Проекты</a>
                 <a class="footer_nav_2" href=".\svet.html">Светорасчет</a>
                 <a class="footer_nav_3" href=".\demo.html">Демонстрация</a>
                 <a class="footer_nav_4 scrollto" href="/index.php#faq">FAQ</a>
