--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -13,16 +13,25 @@
     <link href="https://fonts.googleapis.com/css2?family=Marmelad&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="../js/script.js" defer></script>
+    <script src="../js/burger.js" defer></script>
 </head>
 <body>
     <header>
         <nav class="head">
-            <ul class="menu">
+            <div class="container_header">
+                <div class="navbar__wrap">
+                  <div class="hamb">
+                    <div class="hamb__field" id="hamb">
+                      <span class="bar"></span> <span class="bar"></span>
+                      <span class="bar"></span>
+                    </div>
+                  </div>
+            <ul class="menu" id="head">
                 <li>
                     <a class="menu-button1 scrollto" href="/index.php">Главная</a>
                 </li>
                 <li>
-                    <a class="menu-button2 scrollto" href="/index.php#port">Портфолио</a>
+                    <a class="menu-button2 scrollto" href="\index.php#port">Портфолио</a>
                 </li>
                 <li>
                     <a class="menu-button3" href=".\svet.html">Светорасчет</a>
@@ -37,12 +46,12 @@
                     <a class="menu-button6" href=".\contacts.html">Контакты</a>
                 </li>
             </ul>
-            
+          </div>  
         </span>
         <div class="navpage"></div>
         <img class="logo" src="../logo/эмблема.png">
     </nav>
-
+    <div class="popup" id="popup"></div>
     </header>
     <main>
         <h2 class="contacts_title">Контакты</h2>
