--- a/pages/demo.html
+++ b/pages/demo.html
@@ -15,12 +15,20 @@
 <body>
     <header>
         <nav class="head">
-            <ul class="menu">
+            <div class="container_header">
+                <div class="navbar__wrap">
+                  <div class="hamb">
+                    <div class="hamb__field" id="hamb">
+                      <span class="bar"></span> <span class="bar"></span>
+                      <span class="bar"></span>
+                    </div>
+                  </div>
+            <ul class="menu" id="head">
                 <li>
                     <a class="menu-button1 scrollto" href="/index.php">Главная</a>
                 </li>
                 <li>
-                    <a class="menu-button2 scrollto" href="/index.php#port">Портфолио</a>
+                    <a class="menu-button2 scrollto" href="\index.php#port">Портфолио</a>
                 </li>
                 <li>
                     <a class="menu-button3" href=".\svet.html">Светорасчет</a>
@@ -35,12 +43,12 @@
                     <a class="menu-button6" href=".\contacts.html">Контакты</a>
                 </li>
             </ul>
-            
+          </div>  
         </span>
         <div class="navpage"></div>
         <img class="logo" src="../logo/эмблема.png">
     </nav>
-
+    <div class="popup" id="popup"></div>
     </header>
     <main>
        <div>
