--- a/pages/svet.html
+++ b/pages/svet.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav class="head">
-            <div class="container">
+            <div class="container_header">
                 <div class="navbar__wrap">
                   <div class="hamb">
                     <div class="hamb__field" id="hamb">
